# rag-guard-copilot

./: .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  RULES.md  TASK_LOG.md  app.py  demo_scenarios.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: threat_model.md
sample_data/: documents.csv  users.csv
src/rag_guard_copilot/: __init__.py  assistant.py  audit.py  cli.py  config.py  data_loader.py  pipeline.py  policy_engine.py  retrieval.py  schemas.py  security.py
styles/: sandstone_light.css
tests/: test_security_pipeline.py
